<resources>
    <string name="app_name">LocalBite</string>
    <string name="title_home">Home</string>
    <string name="title_chatbot">Chatbot</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_chatbot_text">This is the Chatbot Fragment</string>
    <string name="fragment_homepage_text">This is the Homepage Fragment</string>
    <string name="fragment_profile_text">This is the Profile Fragment</string>
    <string name="fragment_history_text">This is the History Fragment</string>
    <string name="detail_title_text">Your beautiful title goes here</string>
    <string name="detail_subtitle_text">Your beautiful description goes here</string>
    <string name="content_tab_nutrition">This is the Nutrition tab</string>
    <string name="content_tab_maps">This is the Maps tab</string>
    <string name="tab_text_1">Maps</string>
    <string name="tab_text_2">Nutrition</string>
    <string name="profile_name_text">John Doe</string>
    <string name="profile_email_text">johndoe123@gmail.com</string>
    <string name="homepage_title_text">Welcome, </string>
    <string name="homepage_subtitle_text">Mau makan apa hari ini?</string>
    <string name="see_detail">Lihat Detail</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="register_intro_text">Lengkapi data dirimu dibawah ini, ya!</string>
    <string name="register_name_text">Nama</string>
    <string name="register_email_text">Email</string>
    <string name="register_password_text">Password</string>
    <string name="register_sign_up_text">Sign Up</string>
    <string name="register_account_text">Already have an account?</string>
    <string name="register_account_login_text">Log in here.</string>
    <string name="login_intro_text">Sudah siap untuk makan makanan yang sehat?</string>
    <string name="login_message_text">Masukkan data dirimu dulu, ya!</string>
    <string name="login_account_text">Don\'t have an account?</string>
    <string name="login_account_login_text">Register here.</string>

    <string name="narenda_wicaksono">Narenda Wicaksono</string>
    <string name="narenda_dicoding_com">narenda@dicoding.com</string>
    <string name="verify_hint">Kami telah mengirim kode 6-digit ke email anda.</string>
    <string name="submit">SUBMIT</string>
    <string name="verification">Verification</string>
    <string name="john_doe">John Doe</string>
    <string name="latitude">Latitude: %.6f</string>
    <string name="longitude">Longitude: %.6f</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="localbite_startup">Your craving companion!</string>

    <string-array name="activity_levels">
        <item>Little/no exercise</item>
        <item>Light exercise</item>
        <item>Moderate exercise (3-5 days/wk)</item>
        <item>Very active (6-7 days/wk)</item>
    </string-array>

    <string-array name="weight_loss_options">
        <item>Maintain weight</item>
        <item>Mild weight loss</item>
        <item>Weight loss</item>
        <item>Extreme weight loss</item>
    </string-array>

    <string-array name="allergen_options">
        <item>Peanuts</item>
        <item>Dairy</item>
        <item>Soy</item>
        <item>gluten</item>
        <item>Egg</item>
        <item>Shellfish</item>
    </string-array>

    <string-array name="meal_options">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="disease_options">
        <item>Obesity</item>
        <item>heart_disease</item>
        <item>hypertension</item>
        <item>kidney_disease</item>
        <item>diabetes</item>
        <item>healthy</item>
    </string-array>
</resources>