<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/title_home" />
    </group>

    <item android:title="@string/title_profile">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/baseline_person_24"
                android:title="@string/title_profile" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/baseline_input_24"
                android:title="@string/title_login" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/title_logout" />
        </menu>
    </item>
</menu>