<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="#FFB100"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/homepage_textlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/homepage_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:text="@string/homepage_title_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/homepage_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/john_doe"
            android:textColor="@color/primaryColor" />

    </LinearLayout>


    <TextView
        android:id="@+id/homepage_subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingBottom="8dp"
        android:text="@string/homepage_subtitle_text"
        app:layout_constraintStart_toStartOf="@id/homepage_textlayout"
        app:layout_constraintTop_toBottomOf="@id/homepage_textlayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFoodRecommendation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homepage_subtitle_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>